@@ -1,4 +1,4 @@
-VERSION=1.24
+VERSION=1.25
 PYTHON=python
 
 test:
