@@ -1,3 +1,10 @@
+2014/02/05 (version 1.25)
+
+- Search now searches within the whole description, not only stripped-out
+  versions, which makes it possible to find tasks by URL, when they have
+  some meaning (e.g., Jira includes remote project name sometimes).
+
+
 2014/01/13 (version 1.24)
 
 - Fixed stripping URLs from menu.
